--- a/WebForm/Site.Master
+++ b/WebForm/Site.Master
@@ -12,7 +12,7 @@
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
 
-    <webopt:bundlereference runat="server" path="~/Content/css" />
+    <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
 </head>
@@ -49,7 +49,9 @@
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/About">About</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/ViewState">ViewState</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Events">Events</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/ErrorHandling">Err Handle</a></li>
                     </ul>
                 </div>
             </div>
